chore: updated DB & openAPI to support a showcase owning tenant entity
