# apps/bc-wallet-api-server/src/utils/mappers.ts
@@ -15,6 +15,7 @@ import {
   RelyingParty as RelyingPartyDTO,
   SetupConnectionAction as SetupConnectionActionDTO,
   ShareCredentialAction as ShareCredentialActionDTO,
+  Tenant as TenantDTO,
   Showcase as ShowcaseDTO,
   Step as StepDTO,
   StepAction as StepActionDTO,
@@ -40,7 +41,7 @@ import {
   Showcase,
   Step,
   StepActionType,
-  StepActionTypes,
+  StepActionTypes, Tenant,
   User
 } from '../types'
 
@@ -217,6 +218,14 @@ export const personaDTOFrom = (persona: Persona): PersonaDTO => {
     headshotImage: persona.headshotImage ? assetDTOFrom(persona.headshotImage) : undefined,
     bodyImage: persona.bodyImage ? assetDTOFrom(persona.bodyImage) : undefined,
     hidden: persona.hidden,
+  }
+}
+
+export const tenantDTOFrom = (tenant: Tenant): TenantDTO => {
+  return {
+    id: tenant.id,
+    createdAt: tenant.createdAt,
+    deletedAt: tenant.deletedAt || undefined
   }
 }
 
